fix tweet detail page and component (not showing tweet content), fix tweet detail content font size issue

--- a/src/components/Reply/Reply.module.css
+++ b/src/components/Reply/Reply.module.css
@@ -34,6 +34,14 @@
     color: var(--gray);
 }
 
+.link--underline {
+    cursor: pointer;
+}
+
+.link--underline:hover {
+    text-decoration: underline;
+}
+
 #fullname {
     font-weight: bold;
     color: var(--light-theme-color)
